<package>
  <name>eband_local_planner</name>
  <version>0.1.11</version>
  <description>
     The eband_local_planner package implements a plugin to the base_local_planner. It implements the Elastic Band method on the SE2 manifold.
  </description>
  <maintainer email="hersh@willowgarage.com">Dave Hershberger</maintainer>
  <author>Christian Connette</author>
  <author>Bhaskara Marthi</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/eband_local_planner</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>tinyxml</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>tinyxml</run_depend>

  <export>
    <cpp cflags="-I${prefix}/include -I${prefix}/msg/cpp" lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -leband_local_planner"/>
    <nav_core plugin="${prefix}/bgp_plugin.xml" />
  </export>

</package>


