<?xml version="1.0"?>
<package format="2">
  <name>goal_passer</name>
  <version>0.3.6</version>
  <description>
    A global planner plugin for move_base that simply passes the target pose on
    as a global plan. Useful for debugging local planners.
  </description>
  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <author>Eitan Marder-Eppstein</author>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/goal_passer</url>
  <url type="repository">https://github.com/ros-planning/navigation_experimental.git</url>
  <url type="bugtracker">https://github.com/ros-planning/navigation_experimental/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>costmap_2d</depend>
  <depend>nav_core</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>

  <export>
    <nav_core plugin="${prefix}/bgp_plugin.xml" />
  </export>
</package>
