<?xml version="1.0"?>
<package format="2">
  <name>pose_base_controller</name>
  <version>0.1.11</version>
  <description>
    A node that provides the move_base action server interface, but instead of
    planning simply drives towards the target pose using a control-based
    approach.
  </description>
  <author>Eitan Marder-Eppstein</author>
  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/pose_base_controller</url>
  <url type="repository">https://github.com/ros-planning/navigation_experimental.git</url>
  <url type="bugtracker">https://github.com/ros-planning/navigation_experimental/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>geometry_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
</package>
