<package>
  <name>pose_follower</name>
  <version>0.1.11</version>
  <description>pose_follower</description>
  <maintainer email="hersh@willowgarage.com">Dave Hershberger</maintainer>
  <author>Eitan Marder-Eppstein</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/pose_follower</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>nav_core</build_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pluginlib</build_depend>

  <run_depend>nav_core</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>pluginlib</run_depend>

  <export>
    <cpp cflags="-I${prefix}/include" lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -lpose_follower" />
    <nav_core plugin="${prefix}/blp_plugin.xml" />
  </export>

</package>


