<?xml version="1.0"?>
<package format="2">
  <name>pose_follower</name>
  <version>0.1.11</version>
  <description>
    A implementation of a local planner that attempts to follow a plan as closely as possible.
  </description>
  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <author>Eitan Marder-Eppstein</author>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/pose_follower</url>
  <url type="repository">https://github.com/ros-planning/navigation_experimental.git</url>
  <url type="bugtracker">https://github.com/ros-planning/navigation_experimental/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>base_local_planner</depend>
  <depend>costmap_2d</depend>
  <depend>nav_core</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>

  <export>
    <nav_core plugin="${prefix}/blp_plugin.xml" />
  </export>
</package>
