<?xml version="1.0"?>
<package format="2">
  <name>sbpl_lattice_planner</name>
  <version>0.2.1</version>
  <description>
    The sbpl_lattice_planner is a global planner plugin for move_base and wraps
    the SBPL search-based planning library.
  </description>
  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <author>Michael Phillips</author>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/sbpl_lattice_planner</url>
  <url type="repository">https://github.com/ros-planning/navigation_experimental.git</url>
  <url type="bugtracker">https://github.com/ros-planning/navigation_experimental/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>costmap_2d</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_core</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>sbpl</depend>
  <depend>tf2</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <nav_core plugin="${prefix}/bgp_plugin.xml" />
  </export>
</package>
