<package>
  <name>sbpl_recovery</name>
  <version>0.1.11</version>
  <description>sbpl_recovery</description>
  <maintainer email="hersh@willowgarage.com">Dave Hershberger</maintainer>
  <author>Eitan Marder-Eppstein</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/sbpl_recovery</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>sbpl_lattice_planner</build_depend>
  <build_depend>pose_follower</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>base_local_planner</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>sbpl_lattice_planner</run_depend>
  <run_depend>pose_follower</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>base_local_planner</run_depend>

  <export>
    <nav_core plugin="${prefix}/recovery_plugin.xml" />
  </export>

</package>


