<?xml version="1.0"?>
<package format="2">
  <name>sbpl_recovery</name>
  <version>0.1.11</version>
  <description>
    A recovery behavior that uses the sbpl lattice planner and the pose
    follower to try to plan in full 3D to get the robot out of really tricky
    situations.
  </description>
  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <author>Eitan Marder-Eppstein</author>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/sbpl_recovery</url>
  <url type="repository">https://github.com/ros-planning/navigation_experimental.git</url>
  <url type="bugtracker">https://github.com/ros-planning/navigation_experimental/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>base_local_planner</depend>
  <depend>costmap_2d</depend>
  <depend>nav_core</depend>
  <depend>pluginlib</depend>
  <depend>pose_follower</depend>
  <depend>roscpp</depend>
  <depend>sbpl_lattice_planner</depend>

  <export>
    <nav_core plugin="${prefix}/recovery_plugin.xml" />
  </export>
</package>
